# Vault-for-LLM

./: .compiler_state.json  .coverage  .env.example  .gitignore  .graphify_labels.json  .graphify_state.json  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  PROGRESS.md  README.md  README.zh-CN.md  README.zh-Hant.md  SCHEMA.md  SEARCH_ENHANCEMENT_FIX_REPORT.md  SETUP.md  agent_manifest.json  duplicate_report.json  entity_rules.yaml  guardrails.db-shm  guardrails.db-wal  push_fixes.sh  pyproject.toml  red-team-review-v3.1.md  red-team-review-v4.0.md  red-team-review-v4.1.md  test_security_review.py  trust_report.json
.github/: CLAUDE.md
L0-identity/: identity.md
L1-core-facts/: current-projects.md
L3-knowledge/: README.md
benchmarks/: README.md  benchmark_results.json  search_benchmark.py  semantic_index_benchmark.py
compiled/: processing_log.jsonl  processing_report.json
docs/: agent_first_usage.md  agent_install.md  agent_integrations.md  agent_memory_qa_roadmap.md  agent_onboarding_benchmark.md  api_interfaces.md  automation.md  automation_strategy.md  cli_reference.md  db_backup_restore.md  document_map_citation_policy.md  document_map_coverage_plan.md  document_map_upgrade_plan.md  dream_workflow.md  gui_console.md  llm_integration.md  mcp_memory_workflow.md  mcp_tool_reference.md  memory_governance.md  memory_system_comparison.md  multi_agent_convergence_workflow.md  okf_integration.md  optimization_plan_v2.md  p0_public_string_audit.md  p1_release_readiness_report.md  phase_b_internal_knowledge_capability_plan.md  project_memory_proofs.md  readme_claim_matrix.md  release_checklist_0_4_1.md  release_hygiene_trusted_publishing_design.md  release_stabilization.md  repo_governance.md  search_qa_benchmarking.md  search_qa_metrics_plan.md  semantic_search.md  session_writeback_governance.md  supabase_read_policy.sql  supabase_setup.md  vision.md
error-base/: README.md
examples/: entity_rules.custom-domain.example.yaml
experience-base/: 2026-04-12-token-analysis.md  README.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  update_report.json
guardrails_lite/: __init__.py  agent_policy.py  guardrails_cli.py  guardrails_compile.py  guardrails_db.py  guardrails_embed.py  guardrails_graph.py  guardrails_health.py  guardrails_import.py  guardrails_llm.py  guardrails_log.py  guardrails_map.py  guardrails_mcp.py  guardrails_search.py  search_qa.py
knowledge-base/: README.md
migrations/: 002_vector_search.sql
raw/: 20260416-content-log-evolution.md  20260416-guardrails-compiler-fixes.md  20260416-guardrails-cross-llm-compat.md  20260416-guardrails-lint-health-check.md  20260416-hermes-web-access-fork.md  20260416-karpathy-wiki-vs-guardrails.md  20260416-ollama-cloud-rate-limits.md  20260416-supabase-l2-upsert-重複插入.md  20260416-vault-for-founders-optimization.md  20260416-wsl2-chrome-cdp-bridge.md  20260417-guardrails-lite-contextual-retrieval.md  20260417-guardrails-lite-dedup-fix.md  20260417-holographic-vs-guardrails-分工.md  guardrails-lite-sqlite-onnx-pitfalls.md  test-threebody.md
scripts/: README.md  __init__.py  _utils.py  aaak_compress.py  agent_onboarding_benchmark.py  artifact_audit.py  artifact_cleanup.py  auto_backlink.py  batch_import_knowledge.py  build_agent_onboarding_vault.py  check_release_parity.py  convergence_check.py  cross_validate.py  daily_knowledge_sync.py  deduplicate_semantic.py  fix_ek_links.py  freshness_check.py  frontmatter-spec.md  generate_index.py  guardrails_semantic_search.py  guardrails_setup.sh  guardrails_vector_search.py  guardrails_wakeup.py  history_privacy_scan.py  import_from_supabase.py  install_smoke_matrix.py  manual_review.py  module_size_baseline.json  module_size_gate.py  project_memory_proofs.py  public_pr_gate.py  readme_command_smoke.py  search_qa_regression_gate.py  session_extract.py  suggest_new_knowledge.py  sync_graph_to_supabase.py  sync_to_supabase.py  trust_adjustment.py  watch_supabase_sync.py
security-audits/: red-team-review-v2.md  red-team-review-v3.2.md  red-team-review-v3.3.md  red-team-review-v3.4.md  red-team-review-v3.md  red-team-search-enhancement-review.md
templates/: entity_rules.yaml
tests/: test_access_policy.py  test_agent_behavior_policy.py  test_agent_governance_demo.py  test_agent_onboarding_benchmark.py  test_agent_onboarding_fixture_builder.py  test_agent_policy_extended.py  test_agent_registry.py  test_agent_setup.py  test_automation.py  test_cli_coverage2.py  test_cli_deep_coverage.py  test_cli_extended.py  test_cli_guide.py  test_cli_import_privacy_gate.py  test_cli_json_contract.py  test_cli_more_coverage.py  test_cli_targeted.py  (+76 more)
(+932 files in other folders)
