[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vault-for-llm"
version = "0.6.82"
description = "Local-first Markdown + SQLite memory for LLM agents, with keyword search, optional embeddings, MCP, and bounded citation tools."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Vault-for-LLM Contributors"},
]
keywords = ["knowledge-base", "vector-search", "sqlite", "onnx", "embeddings", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "sqlite-vec>=0.1.6,<1.0",
]

[project.optional-dependencies]
semantic = [
    "onnxruntime>=1.16,<2.0",
    "optimum[onnxruntime]>=2.0,<3.0",
    "transformers>=4.35,<5.0",
    "sentencepiece>=0.1",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]
mcp = [
    "mcp>=1.0",
    "anthropic>=0.30,<1.0",
]
supabase = [
    "supabase>=2.0,<3.0",
]

[project.scripts]
vault = "vault.cli:main"
vault-mcp = "vault.mcp:main"

[tool.setuptools.packages.find]
include = ["vault*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
